--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,30 @@
-.App {
-  text-align: center;
+html,
+body { height: 100%; }
+
+body {
+  background:
+    radial-gradient(
+      ellipse at center,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(229, 229, 229, .85) 100%
+    );
+  background-position: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.pipe {
+  color: #ddd;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+/* Consistent compactness */
+
+html {
+  font-size: 0.875rem;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.btn-sm,
+.btn-group-sm .btn {
+  font-size: 1rem;
+  overflow: hidden;
+  padding-bottom: 0.1875rem;
+  padding-top: 0.1875rem;
 }
