--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,8 @@ body {
       rgba(229, 229, 229, .85) 100%
     );
   background-position: center;
+  font: message-box;
+  line-height: 1.5;
 }
 
 .pipe {
@@ -19,6 +21,10 @@ body {
 
 html {
   font-size: 0.875rem;
+}
+
+.btn {
+  font-family: inherit;
 }
 
 .btn-sm,
