--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,8 @@ html {
   padding-bottom: 0.1875rem;
   padding-top: 0.1875rem;
 }
+
+hr {
+  margin-bottom: 0 !important;
+  margin-top: 0 !important;
+}
